// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Circle Без буквы 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle_value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle В состоянии Changing 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   changing"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle_value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle В состоянии Modified 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   modified"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle_value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle В состоянии default 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle   default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle_value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;

exports[`Circle С head 1`] = `
<div
  class="text text_type_input text_color_input mb-4 absolute head string"
>
  hdd
</div>
`;

exports[`Circle С index 1`] = `
<p
  class="text text_type_input text_color_input mt-4 absolute index"
>
  10200
</p>
`;

exports[`Circle С react-элемент в head 1`] = `
<p
  data-testid="head"
>
  head
</p>
`;

exports[`Circle С react-элемент в tail 1`] = `
<p
  data-testid="tail"
>
  tail
</p>
`;

exports[`Circle С tail 1`] = `
<div
  class="text text_type_input text_color_input mt-4 absolute tail30 string"
>
  TLL
</div>
`;

exports[`Circle С буквой 1`] = `
<p
  class="text text_type_circle text_color_input letter"
  data-testid="circle_value"
>
  BFG
</p>
`;

exports[`Circle С пропом isSmall===true 1`] = `
<div
  class="content "
  data-testid="circle"
>
  <div
    class="text text_type_input text_color_input mb-4 absolute head element"
  />
  <div
    class="circle  small default"
  >
    <p
      class="text text_type_circle text_color_input letter"
      data-testid="circle_value"
    />
  </div>
  <p
    class="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    class="text text_type_input text_color_input mt-4 absolute tail30 element"
  />
</div>
`;
